Navbar z-index fix

--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -6,6 +6,7 @@
     border-bottom: 1px solid rgba(170, 170, 170, 0.5);
     padding: 0.85rem 0;
     opacity: 0.95;
+    z-index: 1;
 
     ul {
         list-style: none;
